# idle_hacker

./: CMakeLists.txt  README.md  run_app.sh
src/: main.cpp
src/buffer/: buffer.hpp
src/render/: render.hpp
src/terminal/: terminal.cpp  terminal.hpp
